--- a/web-app/css/solrsearch.css
+++ b/web-app/css/solrsearch.css
@@ -143,7 +143,7 @@ a.uploading {
 }
         
 .facets .facetGroup li {
-    background-color: 	 #3333FF;
+    background-color: 	#ffffcc;
  -webkit-border-radius: 10px;
 -moz-border-radius: 10px;
 border-radius: 10px;
